<resources>
    <string name="app_name">Network Complaints</string>

    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="app_version">v1.0</string>
    <string name="i_am_offline">I am Offline</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="remember_login">Remember Log In Credentials</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_conditions">I agree to the terms and conditions</string>
    <string name="contact_number">Contact Number</string>
    <string name="login_signup">Log In or Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="sign_up_prompt">Don\'t have an account\nSign up here!</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_requests">My Requests</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="resolved_date">Resolved Date</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="nav_header_username">Anonymous</string>
    <string name="nav_header_user_email">anonymous@mail.com</string>
    <string name="nav_header_user_icon">User Icon</string>
    <string name="user_greet">Hey there!</string>
    <string name="welcome_message">Hi there!\nYou are having network issues?\nDon\'t worry, we are here for you!</string>
    <string name="ask_permissions">Before we get started,\nwe need some permissions\nto analyze your phone and location</string>
    <string name="ask_permission_2">Don\'t worry!\nThis doesn\'t include any private data</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="analyze_device">Analyze Device</string>
    <string name="local_data_not_found">Oops! We didn\'t find any saved data!\nTry analyzing your device</string>
    <string name="sim_details">Sim Details</string>
    <string name="location_details">Location Details</string>
    <string name="operator_name">Operator Name</string>
    <string name="network_type">Network Type</string>
    <string name="signal_strength">Signal Strength</string>
    <string name="asu_level">ASU Level</string>
    <string name="unknown">Unknown</string>
    <string name="date_of_submission">Date of Submission</string>
    <string name="progress_status">Progress Status</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="get_my_requests">Get My Requests</string>
    <string name="send_statistics_data">Send Statistics Data</string>
    <string name="user_requests_summary">Load your previous requests\n and see status progress!</string>
    <!--    preferences-->
    <string name="clear_log_in_pref_key">clear_log_in_pref_key</string>
    <string name="clear_log_in_pref">Clear Credentials</string>
    <string name="clear_log_in_pref_sum">Delete your saved log in credentials</string>

    <string name="clear_device_report_pref_key">clear_device_report_pref_key</string>
    <string name="clear_device_report_pref">Clear Device Report</string>
    <string name="clear_device_report_pref_sum">Delete your saved device report</string>

    <string name="details">Details</string>
    <string name="request_id">Request ID</string>
    <string name="request_details">Request Details</string>
    <string name="operator_details">Operator Details</string>

    <string name="developer_message">Developed with ❤️ By Cyber Minds</string>
    <string name="project_members">Project Members</string>
    <string name="team_members">Arnab Maji\nPrasanta Adak\nSourav Adhikari\nShraddha Thakur\nSubhranil Samanta\nSankhadeep Samanta</string>

</resources>
