<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group
        android:id="@+id/user_actions_group"
        android:checkableBehavior="single">

        <item
            android:title="@string/dashboard"
            android:id="@+id/menu_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp" />

        <item
            android:title="@string/my_requests"
            android:id="@+id/menu_my_requests"
            android:icon="@drawable/ic_send_black_24dp" />

    </group>

    <group
        android:id="@+id/app_info_group"
        android:checkableBehavior="single">
        <item
            android:title="@string/settings"
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings_black_24dp" />

        <item
            android:title="@string/about"
            android:id="@+id/menu_about"
            android:icon="@drawable/ic_people_black_24dp" />
    </group>
</menu>