<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/detailsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/details"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsHeader">

        <TextView
            android:id="@+id/dialogRequestDetailsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_details"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialogRequestIdHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/request_id"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialogRequestIdTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown" />

        <TextView
            android:id="@+id/dialogSubmissionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_of_submission"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialogSubmissionDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown" />

        <TextView
            android:id="@+id/dialogResolvedDateHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resolved_date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialogResolvedDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/detailsHeader">

        <TextView
            android:id="@+id/dialogOperatorDetailsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/operator_details"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialogOperatorNameHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/operator_name"
            android:textAlignment="textEnd"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialogOperatorNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/dialogNetworkTypeHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/network_type"
            android:textAlignment="textEnd"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialogNetworkTypeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/dialogSignalStrengthHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signal_strength"
            android:textAlignment="textEnd"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialogSignalStrengthTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/dialogAsuLevelHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/asu_level"
            android:textAlignment="textEnd"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialogAsuLevelTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/dialogLocationDetailsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_details"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialogLatitudeHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/latitude"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialogLatitudeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown" />

        <TextView
            android:id="@+id/dialogLongitudeHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialogLongitudeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/progress_status"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <ImageView
        android:id="@+id/dialogProgressStatusImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33"
        app:srcCompat="@drawable/done" />

</androidx.constraintlayout.widget.ConstraintLayout>