<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="304dp"
    android:layout_height="171dp"
    android:background="@drawable/nav_drawer_header_image">

    <TextView
        android:id="@+id/navHeaderUserEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="5dp"
        android:text="@string/nav_header_user_email"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/navHeaderUsernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/nav_header_username"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/navHeaderUserEmailTextView"
        app:layout_constraintStart_toStartOf="@+id/navHeaderUserEmailTextView" />

    <ImageView
        android:id="@+id/navHeaderUserImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:contentDescription="@string/nav_header_user_icon"
        app:layout_constraintBottom_toTopOf="@+id/navHeaderUsernameTextView"
        app:layout_constraintStart_toStartOf="@+id/navHeaderUsernameTextView"
        app:srcCompat="@drawable/user" />

</androidx.constraintlayout.widget.ConstraintLayout>