<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/simCardImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sim" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/operatorNameHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/operator_name"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/operatorNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/unknown"
            app:layout_constraintStart_toStartOf="@+id/operatorNameHeader"
            app:layout_constraintTop_toBottomOf="@+id/operatorNameHeader" />

        <TextView
            android:id="@+id/networkTypeHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/network_type"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/operatorNameTextView"
            app:layout_constraintTop_toBottomOf="@+id/operatorNameTextView" />

        <TextView
            android:id="@+id/networkTypeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/unknown"
            app:layout_constraintStart_toStartOf="@+id/networkTypeHeader"
            app:layout_constraintTop_toBottomOf="@+id/networkTypeHeader" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toStartOf="@+id/simCardImage"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/signalStrengthHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signal_strength"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signalStrengthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/unknown"
            app:layout_constraintStart_toStartOf="@+id/signalStrengthHeader"
            app:layout_constraintTop_toBottomOf="@+id/signalStrengthHeader" />

        <TextView
            android:id="@+id/asuLevelHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/asu_level"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/signalStrengthTextView"
            app:layout_constraintTop_toBottomOf="@+id/signalStrengthTextView" />

        <TextView
            android:id="@+id/asuLevelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/unknown"
            app:layout_constraintStart_toStartOf="@+id/asuLevelHeader"
            app:layout_constraintTop_toBottomOf="@+id/asuLevelHeader" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>